--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="나만의 감정 일기장" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <meta property="og:img" content="%PUBLIC_URL%/haru1.jpg" />
+    <meta property="og:site_name" content="감정일기장" />
+    <meta property="og:description" content="하루를 담다" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
